--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         </div>
     </div>
     <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
+    <script src="js/env-config.js"></script>
     <script src="js/app.js"></script>
 </body>
 
